objects/BMCServiceDesk__QueueStaffAssignment__c.object
<CustomObject>
    <fields>
        <fullName>BMCServiceDesk__Last_Incident_Assigned_Time__c</fullName>
        <label>Last Incident Assigned Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__QueueId__c</fullName>
        <label>Queue Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__StaffId__c</fullName>
        <label>Staff Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Queue Staff Assignment</label>
    <nameField>
        <displayFormat>AutoAssign-{0}</displayFormat>
        <label>Queue Staff Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Queue Staff Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>